Add header image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="container">
+        <!---------------------NAVIGATION SECTION----------------------->
         <div class="nav_container">
             <div class="nav--left">
                 <p>Logo</p>
@@ -25,6 +26,10 @@
         </div>
 
         <hr>
+
+        <!------------------------INTRO IMAGE----------------------------->
+
+        <div class="intro-image"></div>
     </div>
 </body>
 </html>
