Create project section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
 
         <div class="intro-image"></div>
 
+        <!--------------OUR PROJECTS---------> 
         
+        <div class="project">
+            <p class="project__head">Our Projects</p>
+            <div class="project__type">
+                <div class="project--img">
+                    <img src="/images/project1.jpg" alt="Meadow Villa">
+                    <p>Meadow Villa</p>
+                </div>
+                <div class="project--img">
+                    <img src="/images/project2.jpg" alt="Orchid Apartment">
+                    <p>Orchid Apartment</p>
+                </div>
+            </div>
+            <div class="project--button">
+                <button><a href="">View All Projects</a></button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
