Set about section structure

--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
             <div class="project--button">
                 <button><a href="">View All Projects</a></button>
             </div>
+
+            <hr>
         </div>
+
+        <!-------------------------ABOUT US------------------>
+        <div class="about">
+            <p>About Us</p>
+            <div class="about__container">
+                <div class="about--image">
+                    <img src="" alt="">
+                </div>
+                
+                <div class="about--content">
+                    <p>Jimo Development Limited</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio nihil sunt beatae quasi? Enim eaque, doloribus possimus, itaque nisi vitae illum odio minus adipisci eveniet asperiores quos voluptas quae provident reprehenderit expedita? Veniam molestias assumenda, quod quae reiciendis, accusamus ad perferendis accusantium iste nihil nobis beatae saepe, tempore aperiam!</p>
+                    <p><a href="">Learn More..</a></p>
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
 </body>
 </html>
