--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <p class="project__head">Our Projects</p>
             <div class="project__type">
                 <div class="project--img">
-                    <img src="images/project1.jpg" alt="Meadow Villa">
+                    <img src="/images/project1.jpg" alt="Meadow Villa">
                     <p>Meadow Villa</p>
                 </div>
                 <div class="project--img">
-                    <img src="images/project2.jpg" alt="Orchid Apartment">
+                    <img src="/images/project2.jpg" alt="Orchid Apartment">
                     <p>Orchid Apartment</p>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <p class="about__header">About Us</p>
             <div class="about__container">
                 <div class="about--image">
-                    <img src="images/about.jpg" alt="About Us">
+                    <img src="/images/about.jpg" alt="About Us">
                 </div>
                 
                 <div class="about--content">
@@ -77,7 +77,7 @@
             <p class="services__header">Our Services</p>
             <div class="services__container">
                 <div class="services--image">
-                    <img src="images/about.jpg" alt="Our Services">
+                    <img src="/images/about.jpg" alt="Our Services">
                 </div>
                 
                 <div class="services--content">
