--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div class="services__container">
                 <div class="services--image">
-                    <img src="images/about.jpg" alt="Our Services">
+                    <img src="/images/about.jpg" alt="Our Services">
                 </div>
                 
                 <div class="services--content">
