--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 
         </div>
 
+        <!---------CONTACT US-------------------------------->
+        <div class="contact">
+            <div class="contact__title1">
+                <p>contact us</p>
+                <p>Do you want to make an enquiry, a complaint or you just want to know more about us? Then you’re on the right page. Send us a message right here or contact us on any of the channels lised below.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
