--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a42b5e9fde.js" crossorigin="anonymous"></script>
     <title>Real Estate</title>
 </head>
 <body>
@@ -109,9 +110,27 @@
 
         <!---------CONTACT US-------------------------------->
         <div class="contact">
-            <div class="contact__title1">
-                <p>contact us</p>
-                <p>Do you want to make an enquiry, a complaint or you just want to know more about us? Then you’re on the right page. Send us a message right here or contact us on any of the channels lised below.</p>
+            <div class="contact__title">
+                <div class="contact__title1">
+                    <p class="head">contact us</p>
+                    <p class="special">Do you want to make an enquiry, a complaint or you just want to know more about us? Then you're on the right page. Send us a message right here or contact us on any of the channels listed below.</p>
+                </div>
+    
+                <div class="contact__title2">
+                    <p class="head">newsletter</p>
+                    <p>Get the latest update and deals</p>
+                </div>
+            </div>
+
+            <div class="contact__details">
+                <div>
+                    <p><i class="fa-solid fa-location-dot"></i></p>
+                    <p><i class="fa-solid fa-bars"></i></p>
+                    <div>
+                        <p>1 Ayinke street, Akoka,</p>
+                        <p>Yaba, Lagos State, Nigeria.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
