--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="project--button">
-                <button><a href="">View All Projects</a></button>
+                <p><a class="button" href="scss/pages/projects/index.html">View All Projects</a></p>
             </div>
 
             <hr>
@@ -64,7 +64,7 @@
                 <div class="about--content">
                     <p class="about--content--1">Jimo Development Limited</p>
                     <p class="about--content--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio nihil sunt beatae quasi? Enim eaque, doloribus possimus, itaque nisi vitae illum odio minus adipisci eveniet asperiores quos voluptas quae provident reprehenderit expedita? Veniam molestias assumenda, quod quae reiciendis, accusamus ad perferendis accusantium iste nihil nobis beatae saepe, tempore aperiam!</p>
-                    <p class="about--content--3"><a href="scss/pages/about/index.html">Learn More..</a></p>
+                    <p class="about--content--3"><a href="">Learn More..</a></p>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
             </div>
 
             <div class="services--button">
-                <button><a href="">View All Services</a></button>
+                <p><a class="button" href="scss/pages/projects/index.html">View All Services</a></p>
             </div>
 
             <hr>
