Fix footer button

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="contact__subscribe">
                         <input type="email" name="" id="" placeholder="Your E-mail">
                         <div class="contact--button">
-                            <button><a href="">Subscribe</a></button>
+                            <p><a class="button" href="">Subscribe</a></p>
                         </div>
                     </div>
                 </div>
