Services section completed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="about--content">
                     <p class="about--content--1">Jimo Development Limited</p>
                     <p class="about--content--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio nihil sunt beatae quasi? Enim eaque, doloribus possimus, itaque nisi vitae illum odio minus adipisci eveniet asperiores quos voluptas quae provident reprehenderit expedita? Veniam molestias assumenda, quod quae reiciendis, accusamus ad perferendis accusantium iste nihil nobis beatae saepe, tempore aperiam!</p>
-                    <p class="about--content--3"><a href="">Learn More..</a></p>
+                    <p class="about--content--3"><a href="scss/pages/about/index.html">Learn More..</a></p>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                 <div class="services--content">
                     <p class="services--content--1">Property Development</p>
                     <p class="services--content--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio nihil sunt beatae quasi? Enim eaque, doloribus possimus, itaque nisi vitae illum odio minus adipisci eveniet asperiores quos voluptas quae provident reprehenderit expedita? Veniam molestias assumenda, quod quae reiciendis, accusamus ad perferendis accusantium iste nihil nobis beatae saepe, tempore aperiam!</p>
-                    <p class="services--content--3"><a href="">Read More..</a></p>
+                    <p class="services--content--3"><a href="scss/pages/services/index.html">Read More..</a></p>
                 </div>
             </div>
 
@@ -96,12 +96,12 @@
                 <div class="services--content">
                     <p class="services--content--1">Property and Facility Management</p>
                     <p class="services--content--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio nihil sunt beatae quasi? Enim eaque, doloribus possimus, itaque nisi vitae illum odio minus adipisci eveniet asperiores quos voluptas quae provident reprehenderit expedita? Veniam molestias assumenda, quod quae reiciendis, accusamus ad perferendis accusantium iste nihil nobis beatae saepe, tempore aperiam!</p>
-                    <p class="services--content--3"><a href="">Read More..</a></p>
+                    <p class="services--content--3"><a href="scss/pages/services/index.html">Read More..</a></p>
                 </div>
             </div>
 
             <div class="services--button">
-                <p><a class="button" href="scss/pages/projects/index.html">View All Services</a></p>
+                <p><a class="button" href="scss/pages/services/index.html">View All Services</a></p>
             </div>
 
             <hr>
@@ -109,7 +109,7 @@
         </div>
 
         <!---------CONTACT US-------------------------------->
-        <footer class="contact">
+        <footer class="contact" id="contact">
             <div class="contact__title">
                 <div class="contact__title1">
                     <p class="head">contact us</p>
