--- a/scss/pages/services/index.html
+++ b/scss/pages/services/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../scss/styles.css">
     <link rel="stylesheet" href="../../../scss/pages/projects/styles.css">
-    <title>About Page</title>
+    <link rel="stylesheet" href="../../../scss/pages/services/styles.css">
+    <title>Services</title>
 </head>
 <body>
-    <!---------------------NAVIGATION SECTION----------------------->
     <div class="nav_container">
         <div class="nav--left">
             <p>Logo</p>
         </div>
         <div class="nav--right">
             <div class="nav--title"><a href="../../../index.html">Home</a></div>
-            <div class="nav--title"><a href="#about">About Us</a></div>
-            <div class="nav--title"><a href="../services/index.html">Services</a></div>
+            <div class="nav--title"><a href="../about/index.html">About Us</a></div>
+            <div class="nav--title"><a href="../projects/index.html">Projects</a></div>
             <div class="nav--title"><a href="#contact">Contact Us</a></div>
         </div>
     </div>
@@ -28,67 +28,36 @@
 
     <div class="intro-image"></div>
 
-    <!-----------------------PROJECTS----------------------------------------->
+    <!-- SERVICES CONTENT -->
 
-    <div class="nav--right nav--services p-project">
-        <div class="nav--title p-project--active"><a href="#overview">Overview</a></div>
-        <div class="nav--title"><a href="#features">Features</a></div>
-        <div class="nav--title"><a href="#home-details">Home Details</a></div>
-        <div class="nav--title"><a href="#payment-plan">Payment Plan</a></div>
-    </div>
-
-    <hr>
-
-    <div class="sect__flex">
-        <div class="sect__flex--1">
-            <p class="sect__flex--title" id="overview">Overview</p>
-            <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
-        </div>
-
-        <div class="sect__flex--2">
-            <video src="../../../images/vid.mp4" controls alt="video unavailable"></video>
-        </div>
-    </div>
-
-    <div class="sect__flex">
-        <div class="sect__flex--1">
-            <p class="sect__flex--title" id="features">Features</p>
-            <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
-        </div>
-
-        <div class="sect__flex--2">
-            <img src="../../../images/project1.jpg" alt="image unavailable">
-        </div>
-    </div>
-
-    <div class="sect__flex">
-        <div class="sect__flex--1">
-            <p class="sect__flex--title" id="home-details">Home Details</p>
-            <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
-        </div>
-
+    <div class="sect__flex service__cover">
         <div class="sect__flex--2">
             <img src="../../../images/project2.jpg" alt="image unavailable">
         </div>
-    </div>
-
-    <div class="sect__flex">
         <div class="sect__flex--1">
-            <p class="sect__flex--title" id="payment-plan">Payment Plan</p>
+            <p class="sect__flex--title">Jimo Development Limited</p>
             <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
         </div>
+    </div>
 
+    <div class="sect__flex service__cover">
         <div class="sect__flex--2">
             <img src="../../../images/project2.jpg" alt="image unavailable">
         </div>
+        <div class="sect__flex--1">
+            <p class="sect__flex--title">Property and Facility Management</p>
+            <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
+        </div>
     </div>
 
-
-    <div class="button__flex">
-        <p><a class="btn" href="">Schedule an Inspection</a></p>
-        <p><a class="btn" href="">Chat on Whatsapp</a></p>
-        <p><a class="btn" href="">Download Brochure</a></p>
-        <p><a class="btn" href="">Fill Application Form</a></p>
+    <div class="sect__flex service__cover">
+        <div class="sect__flex--2">
+            <img src="../../../images/project2.jpg" alt="image unavailable">
+        </div>
+        <div class="sect__flex--1">
+            <p class="sect__flex--title" id="payment-plan">Property and Facility Management</p>
+            <p class="sect__flex--content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ea omnis perferendis maiores suscipit. Quas est recusandae reiciendis magnam praesentium perspiciatis, rem beatae a tempore enim cumque tempora maxime voluptatibus doloribus ipsa totam hic laboriosam dolorem provident optio molestiae aliquid nam! Consequuntur labore nostrum blanditiis doloremque! Odit libero officia autem?</p>
+        </div>
     </div>
     <!-- -------------------FOOTER--------------------------- -->
 
