--- a/scss/pages/projects/index.html
+++ b/scss/pages/projects/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../scss/styles.css">
     <link rel="stylesheet" href="../../../scss/pages/projects/styles.css">
+    <script src="https://kit.fontawesome.com/a42b5e9fde.js" crossorigin="anonymous"></script>
     <title>About Page</title>
 </head>
 <body>
