--- a/scss/pages/services/index.html
+++ b/scss/pages/services/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../../scss/styles.css">
     <link rel="stylesheet" href="../../../scss/pages/projects/styles.css">
     <link rel="stylesheet" href="../../../scss/pages/services/styles.css">
+    <script src="https://kit.fontawesome.com/a42b5e9fde.js" crossorigin="anonymous"></script>
     <title>Services</title>
 </head>
 <body>
