Abaout page done

--- a/scss/pages/about/index.html
+++ b/scss/pages/about/index.html
@@ -92,6 +92,47 @@
         </div>
     </div>
 
+
+    <div class="managers__container">
+        <p class="managers__header">the management team</p>
+
+        <div class="managers__flex">
+            <div><img src="../../../images/about.jpg" alt=""></div>
+            <div class="managers__flex--details">
+                <p class="managers--name">Onyekachi Humphrey Ujebe</p>
+                <p class="managers--title">md/ceo</p>
+
+                <p class="managers--content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi adipisci facere dolor blanditiis minima veritatis aperiam labore nihil quo beatae dolores quasi, animi omnis incidunt voluptatum facilis fuga neque sed veniam consequatur ea? Cumque adipisci quis nostrum assumenda doloribus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quisquam aperiam nostrum impedit ipsam nam id molestias officia consequuntur! Nihil eius rem, non nesciunt saepe itaque error dolorem earum dolor fuga accusantium, dignissimos, veniam totam dicta amet quaerat repellendus. Ex eos dolorem fuga consequuntur facilis deserunt suscipit sequi iste at?</p>
+
+                <p><a href=""><i class="fa-brands fa-linkedin"></i></a></p>
+            </div>
+        </div>
+
+        <div class="managers__flex">
+            <div><img src="../../../images/about.jpg" alt=""></div>
+            <div class="managers__flex--details">
+                <p class="managers--name">Ayomide Timileyin Ahmed</p>
+                <p class="managers--title">legal adviser</p>
+
+                <p class="managers--content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi adipisci facere dolor blanditiis minima veritatis aperiam labore nihil quo beatae dolores quasi, animi omnis incidunt voluptatum facilis fuga neque sed veniam consequatur ea? Cumque adipisci quis nostrum assumenda doloribus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat laborum aliquid. Est neque veniam nesciunt, rem temporibus, magnam id ullam quisquam architecto eum repellat! Quo optio facilis officiis beatae perspiciatis molestiae obcaecati qui cum omnis, quia rerum pariatur quam dicta eaque dolor possimus dolorem tempore, autem doloremque! Exercitationem, minus?</p>
+
+                <p><a href=""><i class="fa-brands fa-linkedin"></i></a></p>
+            </div>
+        </div>
+
+        <div class="managers__flex">
+            <div><img src="../../../images/about.jpg" alt=""></div>
+            <div class="managers__flex--details">
+                <p class="managers--name">Niki</p>
+                <p class="managers--title">sales executive</p>
+
+                <p class="managers--content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi adipisci facere dolor blanditiis minima veritatis aperiam labore nihil quo beatae dolores quasi, animi omnis incidunt voluptatum facilis fuga neque sed veniam consequatur ea? Cumque adipisci quis nostrum assumenda doloribus facilis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo adipisci modi eum aliquid est dignissimos nam harum vero maiores hic. Quibusdam ipsam magni cupiditate repellendus nobis ut excepturi perspiciatis ex ipsum quidem. Hic beatae, ullam rerum harum asperiores recusandae vel in omnis. Eos eligendi nam commodi, eum quisquam quidem excepturi.</p>
+
+                <p><a href=""><i class="fa-brands fa-linkedin"></i></a></p>
+            </div>
+        </div>
+    </div>
+
     <!-- -------------------FOOTER--------------------------- -->
 
     <footer class="contact" id="contact">
